manifests/workloads/wikijs/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  labels:
    app.kubernetes.io/instance: wikijs
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: wikijs
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wiki.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: wikijs
spec:
  type: ExternalName
  externalName: danmanners.com
  selector:
    run: wikijs
  sessionAffinity: None
